--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,1 +1,10 @@
 /* Add CSS Styling */
+.avatar.proportioned {
+    height: auto;
+    width: 500px;
+}
+
+.avatar.distorted {
+    height:400px;
+    width:200px
+}
